--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    return resturant['name']"
+    "    return restaurant['name']"
    ]
   },
   {
